0.60
----
1. If appearance is rounded, also round the 'rubber band' selection.
2. Dont draw light border around selection.
3. Round all view selections.
4. Fix mouse-over selections with custom gradient.
5. Fix KDE app checking.
6. New focus rect options - standard, highlight, background, filled.

0.59.6
------
1. In config dialog, rename the 'Fill' progressbar option to 'No border',
   and place it on the 'Bar' line.
2. Fix some drawing issues with menuitems and NVIDIA.
3. 'Fix' Skype's menu buttons.
4. Only do icon mapping for KDE apps. Fixes crash with qt-recordMyDesktop.

0.59.5
------
1. Fix corners of scrolbars in plasma 4.1's folderview.
2. Fix the dock widget titlebar buttons in KOffice 2
3. Dont activate menubar when Alt key is pressed alone - matches Gtk.
4. Make KOffice's dock widget titlebars look the same as Dolphin's.

0.59.4
------
1. If linked against KDE, honour the single/double click setting for
   listviews.

0.59.3
------
 1. Fix Arora location field.
 2. Override Qt file dialogs with KDE ones. This can be disabled by
    calling cmake with:

     -DQTC_DISABLE_KDEFILEDIALOG_CALLS=true

 3. Link to KDE libraries (if KDE4 is installed) to read kwin settings,
    control the icons on buttons setting, and to load some icons. Disable
    by calling cmake with:

     -DQTC_NO_KDE4_LINKING=true

 4. Fix vertical dockwidget titlebars.
 5. Make busy progress thinner.
 6. Left align tab text - or right align for RTL.
 7. Fix positioning of tab icon for RTL.
 8. Allow tabs to be recoloured.
 9. Draw arrow on toolbar buttons with menus.
10. Fix missing pixels on scrollbars when slider is 1 pix away from
    buttons.
11. Fix custom itemview background painting.
12. Fix border of disabled progressbars.

0.59.2
------
1. Also check in share/kde4/apps/kstyle/themes for qtc_*.themerc files.

0.59.1
------
1. Fix appearance of shiny glass defult buttons.
2. Give glass default buttons a light border.