@@ -6,13 +6,13 @@
     <x>0</x>
     <y>0</y>
     <width>743</width>
-    <height>560</height>
+    <height>637</height>
    </rect>
   </property>
   <property name="windowTitle" >
    <string>Form1</string>
   </property>
-  <layout class="QGridLayout" >
+  <layout class="QGridLayout" name="gridLayout_5" >
    <item row="0" column="0" colspan="2" >
     <widget class="QLabel" name="titleLabel" >
      <property name="sizePolicy" >
@@ -59,7 +59,7 @@
      </column>
     </widget>
    </item>
-   <item rowspan="2" row="1" column="1" >
+   <item row="1" column="1" >
     <widget class="QStackedWidget" name="stack" >
      <property name="sizePolicy" >
       <sizepolicy vsizetype="Preferred" hsizetype="Expanding" >
@@ -68,7 +68,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>11</number>
      </property>
      <widget class="QWidget" name="page" >
       <layout class="QGridLayout" name="gridLayout_2" >
@@ -843,7 +843,7 @@ p, li { white-space: pre-wrap; }
       </layout>
      </widget>
      <widget class="QWidget" name="page_11" >
-      <layout class="QGridLayout" >
+      <layout class="QGridLayout" name="gridLayout_4" >
        <item row="0" column="0" >
         <widget class="QLabel" name="textLabel1_4" >
          <property name="text" >
@@ -891,7 +891,7 @@ p, li { white-space: pre-wrap; }
          <property name="flat" >
           <bool>true</bool>
          </property>
-         <layout class="QGridLayout" >
+         <layout class="QGridLayout" name="gridLayout_3" >
           <item row="0" column="0" >
            <widget class="QLabel" name="textLabel1_4_3" >
             <property name="text" >
@@ -902,7 +902,7 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="0" column="1" colspan="3" >
+          <item row="0" column="1" colspan="5" >
            <widget class="QComboBox" name="menubarAppearance" />
           </item>
           <item row="1" column="0" >
@@ -915,24 +915,24 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="1" column="1" colspan="2" >
+          <item row="1" column="1" colspan="4" >
            <widget class="QComboBox" name="shadeMenubars" />
           </item>
-          <item row="1" column="3" >
+          <item row="1" column="5" >
            <widget class="KColorButton" name="customMenubarsColor" >
             <property name="text" >
              <string/>
             </property>
            </widget>
           </item>
-          <item row="2" column="0" colspan="3" >
+          <item row="2" column="0" colspan="5" >
            <widget class="QCheckBox" name="shadeMenubarOnlyWhenActive" >
             <property name="text" >
              <string>Apply coloration to active window only</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="0" colspan="2" >
+          <item row="3" column="0" colspan="4" >
            <widget class="QCheckBox" name="customMenuTextColor" >
             <property name="sizePolicy" >
              <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
@@ -945,28 +945,28 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="3" column="2" >
+          <item row="3" column="4" >
            <widget class="KColorButton" name="customMenuNormTextColor" >
             <property name="text" >
              <string/>
             </property>
            </widget>
           </item>
-          <item row="3" column="3" >
+          <item row="3" column="5" >
            <widget class="KColorButton" name="customMenuSelTextColor" >
             <property name="text" >
              <string/>
             </property>
            </widget>
           </item>
-          <item row="4" column="0" colspan="4" >
+          <item row="4" column="0" colspan="6" >
            <widget class="QCheckBox" name="menubarMouseOver" >
             <property name="text" >
              <string>Enable mouse-over for menubar items</string>
             </property>
            </widget>
           </item>
-          <item row="5" column="0" colspan="4" >
+          <item row="5" column="0" colspan="6" >
            <widget class="QCheckBox" name="roundMbTopOnly" >
             <property name="text" >
              <string>Round selected menubar items on top only</string>
@@ -983,38 +983,61 @@ p, li { white-space: pre-wrap; }
             </property>
            </widget>
           </item>
-          <item row="6" column="1" colspan="3" >
+          <item row="6" column="1" colspan="5" >
            <widget class="QComboBox" name="menuitemAppearance" />
           </item>
-          <item row="7" column="0" colspan="2" >
+          <item row="7" column="0" colspan="4" >
            <widget class="QCheckBox" name="borderMenuitems" >
             <property name="text" >
              <string>Border menuitems</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="0" colspan="4" >
-           <widget class="QCheckBox" name="lighterPopupMenuBgnd" >
+          <item rowspan="2" row="8" column="0" colspan="3" >
+           <widget class="QLabel" name="label_26" >
             <property name="text" >
-             <string>Lighter popup-menu background</string>
+             <string>Popup-menu background:</string>
             </property>
            </widget>
           </item>
-          <item row="9" column="0" colspan="4" >
+          <item row="9" column="2" >
+           <widget class="KIntNumInput" name="lighterPopupMenuBgnd" >
+            <property name="suffix" >
+             <string>%</string>
+            </property>
+            <property name="prefix" >
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="3" colspan="3" >
+           <spacer name="spacer" >
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0" >
+             <size>
+              <width>208</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="10" column="0" colspan="6" >
            <widget class="QCheckBox" name="thinnerMenuItems" >
             <property name="text" >
              <string>Thinner menu items</string>
             </property>
            </widget>
           </item>
-          <item row="10" column="0" >
+          <item row="11" column="0" >
            <widget class="QCheckBox" name="menuStripe" >
             <property name="text" >
              <string>Menu stripe (KDE)</string>
             </property>
            </widget>
           </item>
-          <item row="10" column="1" colspan="3" >
+          <item row="11" column="1" colspan="5" >
            <widget class="QComboBox" name="menuStripeAppearance" />
           </item>
          </layout>
