@@ -6,6 +6,7 @@
 4. Fix mouse-over selections with custom gradient.
 5. Fix KDE app checking.
 6. New focus rect options - standard, highlight, background, filled.
+7. Add the ability to specify popup menu light factor.
 
 0.59.6
 ------
